--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,1 @@
-<div id="page-wrapper">
-  <div id="page-middle-wrapper">
-    <app-map></app-map>
-  </div>
-
-  <div id="page-right-wrapper">
-    <div id="page-left-weather-wrapper">
-      <h2>What is the forecast?</h2>
-      <p>Here is the local weather forecast for the next couple of days.</p>
-      <hr />
-      <app-weather></app-weather>
-    </div>
-    <app-career></app-career>
-  </div>
-
-  <div id="page-left-wrapper">
-    <div id="page-left-disqus-wrapper">
-      <h2>Do you have something you want to discuss?</h2>
-      <p>This discussion thread is open for discussion.</p>
-      <hr />
-      <div id="disqus_thread"></div>
-    </div>
-
-
-  </div>
-</div>
+<router-outlet></router-outlet>
