--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,4 @@
 @import url("./assets/css/map-widget.css");
 @import url("./assets/css/weather-widget.css");
 @import url("https://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css");
+@import "../node_modules/angular-calendar/css/angular-calendar.css";
